refactor wine model
